<resources>
    <string name="app_name">Zigbee</string>


    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="gateways">My Gateways</string>
    <string name="devices">Devices</string>
    <string name="details">User details</string>

    <string name="alarm">Alarm</string>
    <string name="data">Data</string>
    <string name="open_type">Type</string>

    <string name="search_gateway">Search</string>

    <!-- TODO: Settings -->
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="notify_switch">Notify when open door</string>

    <!-- TODO: Settings -->
    <string name="setting_system">System Settings</string>
    <string name="setting_door_message">Notifycation Of Open Door</string>
    <string name="setting_door_alarm">Notifycation Of Open Alarm</string>
    <string name="setting_auto_connect">Auto Connect Last Device</string>
    <string name="setting_login_password">Set Password Login</string>
    <string name="setting_about">About</string>
    <string name="setting_language">Language</string>
    <string name="setting_close_door">Lock Door</string>
    <string name="setting_quit">Quit</string>

    <string name="system_volumn">Volumn</string>
    <string name="system_sync_time">Sync Time</string>
    <string name="system_safe">High Safe Mode</string>
    <string name="system_reset_password">Reset Admin Password</string>
    <string name="system_reset">Reset to Factory</string>
    <string name="system_free_space">Free Space</string>
    <string name="system_buttery">Buttery</string>
    <string name="system_firewall">Firewall</string>
    <string name="system_version">Version</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
